syntax = "proto3";

option go_package = "github.com/miiy/go-examples/trace/api/user";
option java_multiple_files = true;
option java_package = "io.grpc.examples.user";
option java_outer_classname = "UserProto";

package user;

message User {
  int64 id = 1;
  string name = 2;
}

message GetUserRequest {
  string name = 1;
}

// The user service definition.
service UserService {
  // Sends a getUser
  rpc GetUser (GetUserRequest) returns (User) {}
}

